name:                cabal-gh5423
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
category:            Testing
build-type:          Custom
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal

library
  exposed-modules:     CabalSandbox
  build-depends:       base >= 4 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite cabal-sandbox-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  build-depends:       base, cabal-sandbox
  default-language:    Haskell2010
